--- a/Data/Sys/GameSettings/GP6E01.ini
+++ b/Data/Sys/GameSettings/GP6E01.ini
@@ -1,103 +1,21 @@
-# GP6E01 - Mario Party 6
-
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
-
 [OnFrame]
 # Add memory patches to be applied every frame here.
-
 [Gecko]
-$Netplay Community Settings
-041556d4 7d170e70
-042c31b4 41f00000
-041b02ac 60000000
-04161758 38030002
-04161764 38030002
-204cdb1c 281e0018
-044cdb18 3bde0002
+$QOL - Faster Boot Time [gamemasterplc]
+204cdc74 386003e8
+044cdc34 48000038
+044cdc4c 48000020
 e2000001 80008000
-042c3e94 42200000
-c21c28bc 00000002
-801f0020 38800002
-7c0027d6 00000000
-c21c245c 00000002
-801f0020 38800002
-7c0027d6 00000000
-0420526c 60000000
-0420518c 60000000
-0420516c 60000000
-0404f51c 38000000
-0417e908 60000000
-0415f198 60000000
-0415f1a0 60000000
-C20456D4 00000002
-807F0050 906D0000
-38600000 00000000
-C203E1FC 0000000C
-3860012C 3880000A
-38A0002D 38C00028
-38E000FF 90ED0004
-38ED0004 3D008000
-6108C4B0 7D0903A6
-4E800421 3860012C
-3880000A 3CA08023
-38A5ABEF 80CD0000
-38C60001 C0228350
-3CE08000 60E7C354
-7CE903A6 4E800421
-57A0083C 00000000
-F6000002 80008180
-5460D808 54640FFE
-7C040050 5400283E
-14000020 3C80FFFF
-14000024 6084FFFF
-E0000000 80008000
-F6000001 80008180
-80A405A8 38800001
-14000000 38A0FFFF
-E0000000 80008000
-F6000001 80008180
-80A405A0 38800001
-14000000 38A0FFFF
-E0000000 80008000
-*WARNING: This set of cheats is meant for Netplay only. This can 100% your save so make sure you make backups.
-*This Cheat includes
-*Game Mechanics - Increased Board Speed
-*Game Mechanics - Increased Coin Gain/Loss Speed
-*Game Mechanics - Increased Orb Throwing Speed
-*Game Mechanics - Increased Taunt Capabilities
-*Game Mechanics - Instant Text Display
-*Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games
-*as well as some cheats to 100% the game. We wont tell you which ones they are because that ruins the fun of playing.
-
-$Netplay Safe Kill Music
-042c02a4 00000001
-*This cheat makes it so all in-game music will be turned off.
-*
-*This can safely be used in a Netplay game without desync.
-
-$Game Mechanics - Battle Coins Don't Affect Mini-Game Star
-204cddc8 b003001e
-044cddc4 60000000
+204cc980 41820078
+044cc980 60000000
 e2000001 80008000
-*This cheat makes battle minigames not count towards the Mini-Game Star.
-
-$Game Mechanics - Free Stars
-0418333C 2C030000
-0418342C 2C030000
-041834C4 2C030000
-C2183590 00000002
-38800000 7C8400D0
-60000000 00000000
-0415F668 2C030000
-0415FA18 38800000
-204DAC30 7C641B78
-044DAC30 388000FF
-044DB9DC 38800000
+204CCE7C 3BDE0001
+044CCE7C 3BC00DB6
 E2000001 80008000
-*This cheat makes Stars cost nothing instead of the usual 20 coins.
-
-$Game Mechanics - Increased Board Speed
+*This cheat disables the screens that show before the game boots.
+$QOL - Increased Board Speed [gamemasterplc]
 041556d4 7d170e70
 042c31b4 41f00000
 041b02ac 60000000
@@ -108,8 +26,7 @@ $Game Mechanics - Increased Board Speed
 e2000001 80008000
 042c3e94 42200000
 *This cheat makes the players move faster while playing a Mario Party board.
-
-$Game Mechanics - Increased Coin Gain/Loss Speed
+$QOL - Increased Coin Gain/Loss Speed [gamemasterplc]
 c21c28bc 00000002
 801f0020 38800002
 7c0027d6 00000000
@@ -117,62 +34,372 @@ c21c245c 00000002
 801f0020 38800002
 7c0027d6 00000000
 *This cheat makes the coin animation appear faster then the stock animation.
-
-$Game Mechanics - Increased Orb Throwing Speed
+$QOL - Increased Orb Throwing Speed [gamemasterplc]
 c21c28bc 00000002
 801f0020 38800002
 7c0027d6 00000000
 c21c245c 00000002
 801f0020 38800002
-7c0027d6 00000000
 *This cheat makes orbs appear to be thrown faster.
-
-$Game Mechanics - Increased Taunt Capabilities
+$QOL - Increased Taunt Capabilities [gamemasterplc]
 0420526c 60000000
 0420518c 60000000
 0420516c 60000000
 *This cheat makes it so you can taunt during your turn.
-
-$Game Mechanics - Sluggish Shroom Rolls 1-5
+$QOL - Instant Text Display [gamemasterplc]
+0404f51c 38000000
+*This cheat makes it so text is displayed instantly.
+$Bonus - Kill Background Music [Ralf]
+042c02a4 00000001
+*This cheat makes it so all in-game music will be turned off.
+$QOL - Show Controller Port Number of Who Paused in Mini-Games [gamemasterplc]
+c20456d4 00000002
+807f0050 906d0000
+38600000 00000000
+c203e1fc 0000000c
+3860012c 3880000a
+38a0002d 38c00028
+38e000ff 90ed0004
+38ed0004 3d008000
+6108c4b0 7d0903a6
+4e800421 3860012c
+3880000a 3ca08023
+38a5abef 80cd0000
+38c60001 c0228350
+3ce08000 60e7c354
+7ce903a6 4e800421
+57a0083c 00000000
+*This cheat will display a number on the pause screen of a minigame to see which port paused it
+$QOL - Super Fast Text Boxes [CrankySupertoon]
+F6000002 80008180
+A81F01A0 7C001838
+28000000 41820128
+1400000C 60000000
+E0000000 80008000
+*This cheat makes the Text Boxes Automatically Advance
+$Bonus - Free Stars [gamemasterplc]
+0418333c 2c030000
+0418342c 2c030000
+041834c4 2c030000
+c2183590 00000002
+38800000 7c8400d0
+60000000 00000000
+0415f668 2c030000
+0415fa18 38800000
+204dac30 7c641b78
+044dac30 388000ff
+044db9dc 38800000
+e2000001 80008000
+*This cheat makes Stars cost nothing instead of the usual 20 coins.
+$Bonus - Random Music [gamemasterplc]
+c214427c 00000004
+7c7d1b78 3860006e
+3c808003 6084fcd4
+7c8903a6 4e800421
+7c7d1b78 00000000
+*This cheat makes the music selection totally random.
+*May make getting a star take longer then usual.
+$Bonus - Snowflake Lake - Chomps Sell Stars (40 Coins), Players Start with 0 Stars [gamemasterplc]
+0418040c 480000f0
+204cadfc 48001595
+48000000 802c0364
+de000000 80008180
+14014f64 7834300a
+e2000001 80008000
+204cadfc 48001595
+c24cc390 00000021
+9421ffe0 7c0802a6
+90010024 93e10008
+93c1000c 93a10018
+7c7f1b78 3fc08015
+63decd40 7fc903a6
+4e800421 2c030028
+418000b4 1c7f0108
+3c808026 7c632214
+88635750 70630020
+40820050 38600001
+3c800027 38840003
+38a00006 38c00000
+3fc08016 63debce8
+7fc903a6 4e800421
+3fc08016 63decda8
+7fc903a6 4e800421
+3fc08016 63decafc
+7fc903a6 4e800421
+2c030000 40820050
+7fe3fb78 3880ffd8
+3fc08017 63dee824
+7fc903a6 4e800421
+7fe3fb78 38800000
+38a00001 38c00001
+3fc08017 63defef0
+7fc903a6 4e800421
+38600014 3fc08016
+63deec68 7fc903a6
+4e800421 83a10018
+83c1000c 83e10008
+80010024 7c0803a6
+38210020 4e800020
+60000000 00000000
+044cb09c 480000a0
+e2000001 80008000
+*This cheat makes Snowflake Lake work differently.
+$Bonus - Unfair Mario Party [CrankySupertoon, gamemasterplc, Celerizer, Mega, Ralf]
+0415f1e8 38800001
+0415f278 3880ffec
+c214427c 00000004
+7c7d1b78 3860006e
+3c808003 6084fcd4
+7c8903a6 4e800421
+7c7d1b78 00000000
+f6000002 80008180
+d8010048 8081004c
+98810038 881d000c
+14000004 388000ff
+14000040 386000ff
+1400007c 380000ff
+e0000000 80008000
+04011644 380000ff
+0401164c 380000ff
+04011654 380000ff
+04186608 38000003
+04186b80 4bfffff8
+f6000001 80008180
+41820118 2c170000
+14000000 60000000
+e0000000 80008000
+f6000001 80008180
+88030006 541cdf7e
+d2000000 00000002
+3800002e 98030006
+60000000 00000000
+e0000000 80008000
+20517ab8 408000b8
+04517ab8 480000b8
+e2000001 80008000
+28265ba8 00000000
+02265ba8 00000013
+e2000001 80008000
+28265ba8 00000004
+02265ba8 00000002
+e2000001 80008000
+28265ba8 00000006
+02265ba8 00000013
+e2000001 80008000
+28265ba8 00000007
+02265ba8 00000009
+e2000001 80008000
+28265ba8 0000000a
+02265ba8 0000000a
+e2000001 80008000
+28265ba8 0000000b
+02265ba8 0000000a
+e2000001 80008000
+28265ba8 0000000d
+02265ba8 00000005
+e2000001 80008000
+28265ba8 00000011
+02265ba8 0000000e
+e2000001 80008000
+28265ba8 00000012
+02265ba8 0000000f
+e2000001 80008000
+28265ba8 00000014
+02265ba8 00000008
+e2000001 80008000
+28265ba8 00000015
+02265ba8 0000000c
+e2000001 80008000
+28265ba8 00000016
+02265ba8 00000044
+e2000001 80008000
+28265ba8 00000017
+02265ba8 00000036
+e2000001 80008000
+28265ba8 00000018
+02265ba8 0000001c
+e2000001 80008000
+28265ba8 00000019
+02265ba8 0000001f
+e2000001 80008000
+28265ba8 0000001a
+02265ba8 0000001d
+e2000001 80008000
+28265ba8 0000001e
+02265ba8 0000001e
+e2000001 80008000
+28265ba8 00000021
+02265ba8 00000020
+e2000001 80008000
+28265ba8 00000023
+02265ba8 00000024
+e2000001 80008000
+28265ba8 00000024
+02265ba8 00000024
+e2000001 80008000
+28265ba8 00000025
+02265ba8 00000051
+e2000001 80008000
+28265ba8 00000028
+02265ba8 00000028
+e2000001 80008000
+28265ba8 00000029
+02265ba8 00000028
+e2000001 80008000
+28265ba8 0000002a
+02265ba8 00000051
+e2000001 80008000
+28265ba8 0000002b
+02265ba8 00000027
+e2000001 80008000
+28265ba8 0000002c
+02265ba8 00000026
+e2000001 80008000
+28265ba8 0000002d
+02265ba8 0000000f
+e2000001 80008000
+28265ba8 0000002e
+02265ba8 0000004f
+e2000001 80008000
+28265ba8 0000002f
+02265ba8 0000004b
+e2000001 80008000
+28265ba8 00000030
+02265ba8 00000013
+e2000001 80008000
+28265ba8 00000031
+02265ba8 0000004a
+e2000001 80008000
+28265ba8 00000032
+02265ba8 0000003a
+e2000001 80008000
+28265ba8 00000033
+02265ba8 00000036
+e2000001 80008000
+28265ba8 00000035
+02265ba8 00000034
+e2000001 80008000
+28265ba8 00000038
+02265ba8 00000010
+e2000001 80008000
+28265ba8 00000039
+02265ba8 00000050
+e2000001 80008000
+28265ba8 0000003a
+02265ba8 0000003a
+e2000001 80008000
+28265ba8 0000003b
+02265ba8 0000003d
+e2000001 80008000
+28265ba8 0000003c
+02265ba8 0000003e
+e2000001 80008000
+28265ba8 0000003d
+02265ba8 0000003d
+e2000001 80008000
+28265ba8 0000003e
+02265ba8 0000003e
+e2000001 80008000
+28265ba8 0000003f
+02265ba8 00000046
+e2000001 80008000
+28265ba8 00000043
+02265ba8 00000043
+e2000001 80008000
+28265ba8 00000047
+02265ba8 0000004c
+e2000001 80008000
+04154348 60000000
+0418333c 2c030029
+0418342c 2c030029
+041834c4 2c030029
+c2183590 00000002
+38800029 7c8400d0
+60000000 00000000
+*Unfair Mario Party is a super Chaotic mode full of sweet Mario Party Tears!
+*
+*This Pack Includes
+*
+*1 Coin Blue Spaces
+*Lose 20 Coin Red Spaces
+*Random Path Decisions
+*Randomized Music
+*Mic ALWAYS On
+*41 Coin Stars
+*1-3 Dice Sluggish
+*
+*And a lot of Minigame Replacements to Screw with your RNG
+$Bonus - Warping Frenzy
+00265755 00000005
+00265756 000000FF
+00265757 000000FF
+0026585D 00000005
+0026585E 000000FF
+0026585F 000000FF
+00265965 00000005
+00265966 000000FF
+00265967 000000FF
+00265A6D 00000005
+00265A6E 000000FF
+00265A6F 000000FF
+*Warping Frenzy is a custom game mode for Mario Party that makes it so you always and only have Warp Pipes in your inventory and you can choose to warp on ones turn.
+$Game Mechanics - Always Day [Ralf]
+02265b80  00000000
+*This cheat makes it never be Nightime
+$Game Mechanics - Always Night [Ralf]
+02265b80  00004000
+*This cheat makes it never be Daytime
+$Game Mechanics - Battle Coins Do not Affect Mini-Game Star [gamemasterplc]
+204cddc8 b003001e
+044cddc4 60000000
+e2000001 80008000
+*This cheat makes battle minigames not count towards the Mini-Game Star.
+$Game Mechanics: Last 5 Turns Event Is Always x3 Coins on Spaces
+04202314 38000000
+*Makes the Last 5 Turns Event always be x3 Coins on Spaces
+$Game Mechanics: Last 5 Turns Event Is Always 40 Coin Bonus
+04202314 38000001
+*Makes the Last 5 Turns Event always be a 40 coin bonus for last place
+$Game Mechanics: Last 5 Turns Event Is Always 5 Character Spaces
+04202314 38000002
+*Makes the Last 5 Turns Event always be 5 extra character spaces for last place
+$Game Mechanics: Last 5 Turns Event Is Always Bowser Revolution
+04202314 38000003
+*Makes the Last 5 Turns Event always be a Bowser Revolution
+*This makes everyones coins equal
+$Game Mechanics - Same Space Duels Always Active [Ralf]
+04154348  60000000
+*This cheat makes duels always happen if you are on the same space
+$Game Mechanics - Sluggish Shroom Rolls 1-5 [gamemasterplc]
 04186608 38000005
 04186b80 4bfffff8
 *This cheat makes this orb a little more balanced.
-
-$Minigame - Crate and Peril: Ability to Jump
-0408074c 60fb0003
-*This cheat makes it so Crate and Peril is more balanced.
-
-$Minigame - Dizzy Rotisserie: Lower Starting Time
-204F3F84 38800708
-044F3F84 388004B0
-E2000001 80008000
-*This cheat makes it so Dizzy Rotisserie is more balanced.
-
-$Minigame - Mass Meteor: Ties are Always Ties
+$Minigame - Dizzy Rotisserie: Lower Starting Time [gamemasterplc]
+204f3f84 38800708
+044f3f84 388004b0
+e2000001 80008000
+*By default, Dizzy Rotisseries timer is 30 seconds.
+$Minigame - Mass Meteor: Ties are Always Ties [gamemasterplc]
 204cf648 4082005c
 044cf648 4800005c
 e2000001 80008000
-*This cheat makes it so Mass Meteor is more balanced.
-
-$Minigame - Mole it All: All Moles Worth 3 Points
-204D57F0 A8A10008
-044D57F0 38A00003
-E2000001 80008000
+*By default, Mass Meteor duels in Party Mode will declare a random victor if both players tie.
+$Minigame - Mole it All: All Moles Worth 3 Points [gamemasterplc]
+204d57f0 a8a10008
+044d57f0 38a00003
+e2000001 80008000
 *This cheat makes it so Mole it All is more balanced.
-
-$Minigame - Sink or Swim: Infinite Air
-204CF1A4 3803FFFF
-044CF1A4 38000258
-E2000001 80008000
+$Minigame - Sink or Swim: Infinite Air [gamemasterplc]
+204cf1a4 3803ffff
+044cf1a4 38000258
+e2000001 80008000
 *This cheat makes it so Sink or Swim is more balanced.
-
-$Minigame - Trap Ease Artist: All Goombas Worth 1 Point
+$Minigame - Trap Ease Artist: All Goombas Worth 1 Point [gamemasterplc]
 204d3128 38000003
 044d3128 38000001
 e2000001 80008000
 *This cheat makes it so Trap Ease Artist is more balanced.
-
-$Minigame - Treasure Trawlers: All Scavenged Items are Regular Chests
+$Minigame - Treasure Trawlers: All Scavenged Items are Regular Chests [gamemasterplc]
 20501374 e3e100a8
 c24fc478 00000003
 2c030000 40810008
@@ -180,72 +407,43 @@ c24fc478 00000003
 60000000 00000000
 e2000001 80008000
 *This cheat makes it so Treasure Trawlers is more balanced.
-
-$Minigame Replacement - Replace Odd Card Out ➜ What Goes Up...
+$Minigame Replacement - Crate and Peril ➜ Snow Brawl [gamemasterplc]
+28265ba8  0000001f
+02265ba8  00000019
+e2000001  80008000
+$Minigame Replacement - Insectiride ➜ Hyper Sniper [gamemasterplc]
+28265ba8  0000002e
+02265ba8  0000002d
+e2000001  80008000
+$Minigame Replacement - Odd Card Out ➜ What Goes Up... [gamemasterplc]
 28265ba8 00000001
 02265ba8 00000003
 e2000001 80008000
-
-$Minigame Replacement - Replace Pitifall ➜ Cog Jog
+$Minigame Replacement - Pitifall ➜ Cog Jog [gamemasterplc]
 28265ba8 00000036
 02265ba8 00000017
+e2000001 8000800
+$Minigame Replacement - Pixel Perfect ➜ Light Breeze [gamemasterplc]
+28265ba8 00000023
+02265ba8 00000026
 e2000001 80008000
-
-$Minigame Replacement - Replace Trick or Tree ➜ Boo Off the Stage
+$Minigame Replacement - Ray of Fright ➜ Conveyor Bolt [gamemasterplc]
+28265ba8  00000020
+02265ba8  0000001e
+e2000001  80008000
+$Minigame Replacement - Slot Trot ➜ Clean Team [gamemasterplc]
+28265ba8 00000024
+02265ba8 0000002C
+e2000001 80008000
+$Minigame Replacement - Trap Ease Artist ➜ Pokey Punch-out [gamemasterplc]
+28265ba8  00000013
+02265ba8  00000014
+e2000001  80008000
+$Minigame Replacement - Trick or Tree ➜ Boo Off the Stage [gamemasterplc]
 28265ba8 0000003d
 02265ba8 0000003b
 e2000001 80008000
-
-$Minigame Replacement - Replace Tricky Tires ➜ Cannonball Fun
+$Minigame Replacement - Tricky Tires ➜ Cannonball Fun [gamemasterplc]
 28265ba8 00000009
 02265ba8 0000000d
 e2000001 80008000
-
-$Miscellaneous - Instant Text Display
-0404f51c 38000000
-*This cheat makes it so text is displayed instantly.
-
-$Miscellaneous - Random Music
-C214427C 00000004
-7C7D1B78 3860006E
-3C808003 6084FCD4
-7C8903A6 4E800421
-7C7D1B78 00000000
-*This cheat makes the music selection totally random.
-
-$Miscellaneous - Show Controller Port Number of Who Paused in Mini-Games
-C20456D4 00000002
-807F0050 906D0000
-38600000 00000000
-C203E1FC 0000000C
-3860012C 3880000A
-38A0002D 38C00028
-38E000FF 90ED0004
-38ED0004 3D008000
-6108C4B0 7D0903A6
-4E800421 3860012C
-3880000A 3CA08023
-38A5ABEF 80CD0000
-38C60001 C0228350
-3CE08000 60E7C354
-7CE903A6 4E800421
-57A0083C 00000000
-*This cheat will display a number on the pause screen of a minigame to see which port paused it.
-
-$Miscellaneous - Widescreen
-040183EC 38600001
-C20A17B0 00000002
-C0A29F48 EFA22824
-60000000 00000000
-C20A152C 00000002
-C0029F48 EF620024
-60000000 00000000
-042C30F8 3FCCCCCD
-C202C18C 00000002
-C01F000C C3A29F48
-EC00E824 00000000
-0414E760 C3A30000
-041932E0 388002D0
-042C14B8 3FCCCCCD
-04151324 38600001
-*This cheat makes the game appear in widescreen.
