VideoCommon: Break build dependency cycle
In cmake, VideoCommon was depending on it's video
backends by depending on all of core.
Not only was this a cycle, with the video backends
depending on VideoCommon again, but VideoCommon
really shouldn't be depending on core.

So we move the initialization of the video backends into UICommon

--- a/Source/Core/UICommon/CMakeLists.txt
+++ b/Source/Core/UICommon/CMakeLists.txt
@@ -23,6 +23,8 @@ add_library(uicommon
   UICommon.h
   USBUtils.cpp
   USBUtils.h
+  VideoBackends.cpp
+  VideoBackends.h
   VideoUtils.cpp
   VideoUtils.h
 )
@@ -30,6 +32,10 @@ add_library(uicommon
 target_link_libraries(uicommon
 PUBLIC
   common
+  videonull
+  videoogl
+  videosoftware
+  videovulkan
   cpp-optparse
   minizip
   pugixml
@@ -38,6 +44,14 @@ PRIVATE
   fmt::fmt
   $<$<BOOL:APPLE>:${IOK_LIBRARY}>
 )
+
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  target_link_libraries(uicommon
+  PUBLIC
+    videod3d
+    videod3d12
+  )
+endif()
 
 if ((DEFINED CMAKE_ANDROID_ARCH_ABI AND CMAKE_ANDROID_ARCH_ABI MATCHES "x86|x86_64") OR
     (NOT DEFINED CMAKE_ANDROID_ARCH_ABI AND _M_X86))
