--- a/Source/Core/UICommon/UICommon.vcxproj
+++ b/Source/Core/UICommon/UICommon.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="USBUtils.cpp">
       <DisableSpecificWarnings>4200;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
+    <ClCompile Include="VideoBackends.cpp" />
     <ClCompile Include="VideoUtils.cpp" />
     <ClCompile Include="GameFile.cpp" />
     <ClCompile Include="GameFileCache.cpp" />
@@ -88,6 +89,8 @@
     <ClInclude Include="UICommon.h" />
     <ClInclude Include="Disassembler.h" />
     <ClInclude Include="USBUtils.h" />
+    <ClInclude Include="VideoBackends.h" />
+    <ClCompile Include="VideoUtils.h" />
     <ClInclude Include="GameFile.h" />
     <ClInclude Include="GameFileCache.h" />
   </ItemGroup>
